[gd_scene load_steps=4 format=3 uid="uid://jeqm7vcx1nbs"]

[ext_resource type="Script" path="res://scripts/spell_list_ui.gd" id="1_bwdyc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwxk8"]
bg_color = Color(0.340339, 0.340339, 0.340339, 1)

[sub_resource type="Theme" id="Theme_bu744"]
Panel/styles/panel = SubResource("StyleBoxFlat_hwxk8")

[node name="Panel" type="Panel"]
offset_left = 63.0
offset_top = 55.0
offset_right = 623.0
offset_bottom = 367.0
theme = SubResource("Theme_bu744")
script = ExtResource("1_bwdyc")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
text = "spell list"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = "X"
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 25.0
offset_right = 560.0
offset_bottom = 312.0
horizontal_scroll_mode = 0

[node name="BoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
